GERADOR DE CODIGO/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     program -> empty
Rule 3     class_list -> class_list class PONTOVIRGULA
Rule 4     class_list -> class PONTOVIRGULA
Rule 5     class -> CLASS ID INHERITS ID ABRECHAVES feature_list FECHACHAVES
Rule 6     class -> CLASS ID ABRECHAVES feature_list FECHACHAVES
Rule 7     feature_list -> feature_list feature PONTOVIRGULA
Rule 8     feature_list -> empty
Rule 9     feature -> ID ABREPARENTESES formal_list FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
Rule 10    feature -> ID ABREPARENTESES FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
Rule 11    feature -> ID DOISPONTOS ID SETA expr
Rule 12    feature -> ID DOISPONTOS ID
Rule 13    feature -> empty
Rule 14    formal_list -> formal_list VIRGULA formal
Rule 15    formal_list -> formal
Rule 16    formal_list -> empty
Rule 17    formal -> ID DOISPONTOS ID
Rule 18    expr -> NEW ID
Rule 19    expr -> ISVOID expr
Rule 20    expr -> NOT expr
Rule 21    expr -> COMPLEMENTO expr
Rule 22    expr -> STRING
Rule 23    expr -> TRUE
Rule 24    expr -> FALSE
Rule 25    expr -> NUMERO
Rule 26    expr -> ID
Rule 27    expr -> expr MAIS expr
Rule 28    expr -> expr MENOS expr
Rule 29    expr -> expr MULTIPLICA expr
Rule 30    expr -> expr DIVISAO expr
Rule 31    expr -> expr MENOR expr
Rule 32    expr -> expr MENORIGUAL expr
Rule 33    expr -> expr IGUAL expr
Rule 34    expr -> ID SETA expr
Rule 35    expr -> ABREPARENTESES expr FECHAPARENTESES
Rule 36    expr -> ID ABREPARENTESES expr_list FECHAPARENTESES
Rule 37    expr -> expr ARROBA ID PONTO expr
Rule 38    expr -> expr PONTO expr
Rule 39    expr_list -> expr_list VIRGULA expr
Rule 40    expr_list -> expr
Rule 41    expr_list -> empty
Rule 42    expr -> IF expr THEN expr ELSE expr FI
Rule 43    expr -> WHILE expr LOOP expr POOL
Rule 44    expr -> ABRECHAVES expr_list_mais FECHACHAVES
Rule 45    expr_list_mais -> expr_list_mais expr PONTOVIRGULA
Rule 46    expr_list_mais -> expr PONTOVIRGULA
Rule 47    expr -> LET ID DOISPONTOS ID SETA expr id_type_list IN expr
Rule 48    expr -> LET ID DOISPONTOS ID id_type_list IN expr
Rule 49    id_type_list -> id_type_list id_type
Rule 50    id_type_list -> id_type
Rule 51    id_type -> VIRGULA ID DOISPONTOS ID SETA expr
Rule 52    id_type -> VIRGULA ID DOISPONTOS ID
Rule 53    id_type -> empty
Rule 54    expr -> CASE expr OF id_type_list_2 ESAC
Rule 55    id_type_list_2 -> id_type_list_2 id_type_2
Rule 56    id_type_list_2 -> id_type_2
Rule 57    id_type_2 -> ID DOISPONTOS ID IGUALMAIOR expr PONTOVIRGULA
Rule 58    empty -> <empty>

Terminals, with rules where they appear

ABRECHAVES           : 5 6 9 10 44
ABREPARENTESES       : 9 10 35 36
ARROBA               : 37
CASE                 : 54
CLASS                : 5 6
COMPLEMENTO          : 21
DIVISAO              : 30
DOISPONTOS           : 9 10 11 12 17 47 48 51 52 57
ELSE                 : 42
ESAC                 : 54
FALSE                : 24
FECHACHAVES          : 5 6 9 10 44
FECHAPARENTESES      : 9 10 35 36
FI                   : 42
ID                   : 5 5 6 9 9 10 10 11 11 12 12 17 17 18 26 34 36 37 47 47 48 48 51 51 52 52 57 57
IF                   : 42
IGUAL                : 33
IGUALMAIOR           : 57
IN                   : 47 48
INHERITS             : 5
ISVOID               : 19
LET                  : 47 48
LOOP                 : 43
MAIS                 : 27
MENOR                : 31
MENORIGUAL           : 32
MENOS                : 28
MULTIPLICA           : 29
NEW                  : 18
NOT                  : 20
NUMERO               : 25
OF                   : 54
PONTO                : 37 38
PONTOVIRGULA         : 3 4 7 45 46 57
POOL                 : 43
SETA                 : 11 34 47 51
STRING               : 22
THEN                 : 42
TRUE                 : 23
VIRGULA              : 14 39 51 52
WHILE                : 43
error                : 

Nonterminals, with rules where they appear

class                : 3 4
class_list           : 1 3
empty                : 2 8 13 16 41 53
expr                 : 9 10 11 19 20 21 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 35 37 37 38 38 39 40 42 42 42 43 43 45 46 47 47 48 51 54 57
expr_list            : 36 39
expr_list_mais       : 44 45
feature              : 7
feature_list         : 5 6 7
formal               : 14 15
formal_list          : 9 14
id_type              : 49 50
id_type_2            : 55 56
id_type_list         : 47 48 49
id_type_list_2       : 54 55
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (2) program -> . empty
    (3) class_list -> . class_list class PONTOVIRGULA
    (4) class_list -> . class PONTOVIRGULA
    (58) empty -> .
    (5) class -> . CLASS ID INHERITS ID ABRECHAVES feature_list FECHACHAVES
    (6) class -> . CLASS ID ABRECHAVES feature_list FECHACHAVES

    $end            reduce using rule 58 (empty -> .)
    CLASS           shift and go to state 5

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    empty                          shift and go to state 3
    class                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .
    (3) class_list -> class_list . class PONTOVIRGULA
    (5) class -> . CLASS ID INHERITS ID ABRECHAVES feature_list FECHACHAVES
    (6) class -> . CLASS ID ABRECHAVES feature_list FECHACHAVES

    $end            reduce using rule 1 (program -> class_list .)
    CLASS           shift and go to state 5

    class                          shift and go to state 6

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (4) class_list -> class . PONTOVIRGULA

    PONTOVIRGULA    shift and go to state 7


state 5

    (5) class -> CLASS . ID INHERITS ID ABRECHAVES feature_list FECHACHAVES
    (6) class -> CLASS . ID ABRECHAVES feature_list FECHACHAVES

    ID              shift and go to state 8


state 6

    (3) class_list -> class_list class . PONTOVIRGULA

    PONTOVIRGULA    shift and go to state 9


state 7

    (4) class_list -> class PONTOVIRGULA .

    CLASS           reduce using rule 4 (class_list -> class PONTOVIRGULA .)
    $end            reduce using rule 4 (class_list -> class PONTOVIRGULA .)


state 8

    (5) class -> CLASS ID . INHERITS ID ABRECHAVES feature_list FECHACHAVES
    (6) class -> CLASS ID . ABRECHAVES feature_list FECHACHAVES

    INHERITS        shift and go to state 10
    ABRECHAVES      shift and go to state 11


state 9

    (3) class_list -> class_list class PONTOVIRGULA .

    CLASS           reduce using rule 3 (class_list -> class_list class PONTOVIRGULA .)
    $end            reduce using rule 3 (class_list -> class_list class PONTOVIRGULA .)


state 10

    (5) class -> CLASS ID INHERITS . ID ABRECHAVES feature_list FECHACHAVES

    ID              shift and go to state 12


state 11

    (6) class -> CLASS ID ABRECHAVES . feature_list FECHACHAVES
    (7) feature_list -> . feature_list feature PONTOVIRGULA
    (8) feature_list -> . empty
    (58) empty -> .

    FECHACHAVES     reduce using rule 58 (empty -> .)
    ID              reduce using rule 58 (empty -> .)
    PONTOVIRGULA    reduce using rule 58 (empty -> .)

    feature_list                   shift and go to state 13
    empty                          shift and go to state 14

state 12

    (5) class -> CLASS ID INHERITS ID . ABRECHAVES feature_list FECHACHAVES

    ABRECHAVES      shift and go to state 15


state 13

    (6) class -> CLASS ID ABRECHAVES feature_list . FECHACHAVES
    (7) feature_list -> feature_list . feature PONTOVIRGULA
    (9) feature -> . ID ABREPARENTESES formal_list FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
    (10) feature -> . ID ABREPARENTESES FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
    (11) feature -> . ID DOISPONTOS ID SETA expr
    (12) feature -> . ID DOISPONTOS ID
    (13) feature -> . empty
    (58) empty -> .

    FECHACHAVES     shift and go to state 17
    ID              shift and go to state 16
    PONTOVIRGULA    reduce using rule 58 (empty -> .)

    feature                        shift and go to state 18
    empty                          shift and go to state 19

state 14

    (8) feature_list -> empty .

    FECHACHAVES     reduce using rule 8 (feature_list -> empty .)
    ID              reduce using rule 8 (feature_list -> empty .)
    PONTOVIRGULA    reduce using rule 8 (feature_list -> empty .)


state 15

    (5) class -> CLASS ID INHERITS ID ABRECHAVES . feature_list FECHACHAVES
    (7) feature_list -> . feature_list feature PONTOVIRGULA
    (8) feature_list -> . empty
    (58) empty -> .

    FECHACHAVES     reduce using rule 58 (empty -> .)
    ID              reduce using rule 58 (empty -> .)
    PONTOVIRGULA    reduce using rule 58 (empty -> .)

    feature_list                   shift and go to state 20
    empty                          shift and go to state 14

state 16

    (9) feature -> ID . ABREPARENTESES formal_list FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
    (10) feature -> ID . ABREPARENTESES FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
    (11) feature -> ID . DOISPONTOS ID SETA expr
    (12) feature -> ID . DOISPONTOS ID

    ABREPARENTESES  shift and go to state 21
    DOISPONTOS      shift and go to state 22


state 17

    (6) class -> CLASS ID ABRECHAVES feature_list FECHACHAVES .

    PONTOVIRGULA    reduce using rule 6 (class -> CLASS ID ABRECHAVES feature_list FECHACHAVES .)


state 18

    (7) feature_list -> feature_list feature . PONTOVIRGULA

    PONTOVIRGULA    shift and go to state 23


state 19

    (13) feature -> empty .

    PONTOVIRGULA    reduce using rule 13 (feature -> empty .)


state 20

    (5) class -> CLASS ID INHERITS ID ABRECHAVES feature_list . FECHACHAVES
    (7) feature_list -> feature_list . feature PONTOVIRGULA
    (9) feature -> . ID ABREPARENTESES formal_list FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
    (10) feature -> . ID ABREPARENTESES FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
    (11) feature -> . ID DOISPONTOS ID SETA expr
    (12) feature -> . ID DOISPONTOS ID
    (13) feature -> . empty
    (58) empty -> .

    FECHACHAVES     shift and go to state 24
    ID              shift and go to state 16
    PONTOVIRGULA    reduce using rule 58 (empty -> .)

    feature                        shift and go to state 18
    empty                          shift and go to state 19

state 21

    (9) feature -> ID ABREPARENTESES . formal_list FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
    (10) feature -> ID ABREPARENTESES . FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
    (14) formal_list -> . formal_list VIRGULA formal
    (15) formal_list -> . formal
    (16) formal_list -> . empty
    (17) formal -> . ID DOISPONTOS ID
    (58) empty -> .

  ! shift/reduce conflict for FECHAPARENTESES resolved as shift
    FECHAPARENTESES shift and go to state 27
    ID              shift and go to state 25
    VIRGULA         reduce using rule 58 (empty -> .)

  ! FECHAPARENTESES [ reduce using rule 58 (empty -> .) ]

    formal_list                    shift and go to state 26
    formal                         shift and go to state 28
    empty                          shift and go to state 29

state 22

    (11) feature -> ID DOISPONTOS . ID SETA expr
    (12) feature -> ID DOISPONTOS . ID

    ID              shift and go to state 30


state 23

    (7) feature_list -> feature_list feature PONTOVIRGULA .

    FECHACHAVES     reduce using rule 7 (feature_list -> feature_list feature PONTOVIRGULA .)
    ID              reduce using rule 7 (feature_list -> feature_list feature PONTOVIRGULA .)
    PONTOVIRGULA    reduce using rule 7 (feature_list -> feature_list feature PONTOVIRGULA .)


state 24

    (5) class -> CLASS ID INHERITS ID ABRECHAVES feature_list FECHACHAVES .

    PONTOVIRGULA    reduce using rule 5 (class -> CLASS ID INHERITS ID ABRECHAVES feature_list FECHACHAVES .)


state 25

    (17) formal -> ID . DOISPONTOS ID

    DOISPONTOS      shift and go to state 31


state 26

    (9) feature -> ID ABREPARENTESES formal_list . FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES
    (14) formal_list -> formal_list . VIRGULA formal

    FECHAPARENTESES shift and go to state 32
    VIRGULA         shift and go to state 33


state 27

    (10) feature -> ID ABREPARENTESES FECHAPARENTESES . DOISPONTOS ID ABRECHAVES expr FECHACHAVES

    DOISPONTOS      shift and go to state 34


state 28

    (15) formal_list -> formal .

    FECHAPARENTESES reduce using rule 15 (formal_list -> formal .)
    VIRGULA         reduce using rule 15 (formal_list -> formal .)


state 29

    (16) formal_list -> empty .

    FECHAPARENTESES reduce using rule 16 (formal_list -> empty .)
    VIRGULA         reduce using rule 16 (formal_list -> empty .)


state 30

    (11) feature -> ID DOISPONTOS ID . SETA expr
    (12) feature -> ID DOISPONTOS ID .

    SETA            shift and go to state 35
    PONTOVIRGULA    reduce using rule 12 (feature -> ID DOISPONTOS ID .)


state 31

    (17) formal -> ID DOISPONTOS . ID

    ID              shift and go to state 36


state 32

    (9) feature -> ID ABREPARENTESES formal_list FECHAPARENTESES . DOISPONTOS ID ABRECHAVES expr FECHACHAVES

    DOISPONTOS      shift and go to state 37


state 33

    (14) formal_list -> formal_list VIRGULA . formal
    (17) formal -> . ID DOISPONTOS ID

    ID              shift and go to state 25

    formal                         shift and go to state 38

state 34

    (10) feature -> ID ABREPARENTESES FECHAPARENTESES DOISPONTOS . ID ABRECHAVES expr FECHACHAVES

    ID              shift and go to state 39


state 35

    (11) feature -> ID DOISPONTOS ID SETA . expr
    (18) expr -> . NEW ID
    (19) expr -> . ISVOID expr
    (20) expr -> . NOT expr
    (21) expr -> . COMPLEMENTO expr
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
    (25) expr -> . NUMERO
    (26) expr -> . ID
    (27) expr -> . expr MAIS expr
    (28) expr -> . expr MENOS expr
    (29) expr -> . expr MULTIPLICA expr
    (30) expr -> . expr DIVISAO expr
    (31) expr -> . expr MENOR expr
    (32) expr -> . expr MENORIGUAL expr
    (33) expr -> . expr IGUAL expr
    (34) expr -> . ID SETA expr
    (35) expr -> . ABREPARENTESES expr FECHAPARENTESES
    (36) expr -> . ID ABREPARENTESES expr_list FECHAPARENTESES
    (37) expr -> . expr ARROBA ID PONTO expr
    (38) expr -> . expr PONTO expr
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . ABRECHAVES expr_list_mais FECHACHAVES
    (47) expr -> . LET ID DOISPONTOS ID SETA expr id_type_list IN expr
    (48) expr -> . LET ID DOISPONTOS ID id_type_list IN expr
    (54) expr -> . CASE expr OF id_type_list_2 ESAC

    NEW             shift and go to state 42
    ISVOID          shift and go to state 43
    NOT             shift and go to state 44
    COMPLEMENTO     shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    NUMERO          shift and go to state 49
    ID              shift and go to state 40
    ABREPARENTESES  shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    ABRECHAVES      shift and go to state 53
    LET             shift and go to state 54
    CASE            shift and go to state 55

    expr                           shift and go to state 41

state 36

    (17) formal -> ID DOISPONTOS ID .

    FECHAPARENTESES reduce using rule 17 (formal -> ID DOISPONTOS ID .)
    VIRGULA         reduce using rule 17 (formal -> ID DOISPONTOS ID .)


state 37

    (9) feature -> ID ABREPARENTESES formal_list FECHAPARENTESES DOISPONTOS . ID ABRECHAVES expr FECHACHAVES

    ID              shift and go to state 56


state 38

    (14) formal_list -> formal_list VIRGULA formal .

    FECHAPARENTESES reduce using rule 14 (formal_list -> formal_list VIRGULA formal .)
    VIRGULA         reduce using rule 14 (formal_list -> formal_list VIRGULA formal .)


state 39

    (10) feature -> ID ABREPARENTESES FECHAPARENTESES DOISPONTOS ID . ABRECHAVES expr FECHACHAVES

    ABRECHAVES      shift and go to state 57


state 40

    (26) expr -> ID .
    (34) expr -> ID . SETA expr
    (36) expr -> ID . ABREPARENTESES expr_list FECHAPARENTESES

    MAIS            reduce using rule 26 (expr -> ID .)
    MENOS           reduce using rule 26 (expr -> ID .)
    MULTIPLICA      reduce using rule 26 (expr -> ID .)
    DIVISAO         reduce using rule 26 (expr -> ID .)
    MENOR           reduce using rule 26 (expr -> ID .)
    MENORIGUAL      reduce using rule 26 (expr -> ID .)
    IGUAL           reduce using rule 26 (expr -> ID .)
    ARROBA          reduce using rule 26 (expr -> ID .)
    PONTO           reduce using rule 26 (expr -> ID .)
    PONTOVIRGULA    reduce using rule 26 (expr -> ID .)
    FECHAPARENTESES reduce using rule 26 (expr -> ID .)
    THEN            reduce using rule 26 (expr -> ID .)
    LOOP            reduce using rule 26 (expr -> ID .)
    OF              reduce using rule 26 (expr -> ID .)
    FECHACHAVES     reduce using rule 26 (expr -> ID .)
    VIRGULA         reduce using rule 26 (expr -> ID .)
    ELSE            reduce using rule 26 (expr -> ID .)
    POOL            reduce using rule 26 (expr -> ID .)
    FI              reduce using rule 26 (expr -> ID .)
    IN              reduce using rule 26 (expr -> ID .)
    SETA            shift and go to state 58
    ABREPARENTESES  shift and go to state 59


state 41

    (11) feature -> ID DOISPONTOS ID SETA expr .
    (27) expr -> expr . MAIS expr
    (28) expr -> expr . MENOS expr
    (29) expr -> expr . MULTIPLICA expr
    (30) expr -> expr . DIVISAO expr
    (31) expr -> expr . MENOR expr
    (32) expr -> expr . MENORIGUAL expr
    (33) expr -> expr . IGUAL expr
    (37) expr -> expr . ARROBA ID PONTO expr
    (38) expr -> expr . PONTO expr

    PONTOVIRGULA    reduce using rule 11 (feature -> ID DOISPONTOS ID SETA expr .)
    MAIS            shift and go to state 60
    MENOS           shift and go to state 61
    MULTIPLICA      shift and go to state 62
    DIVISAO         shift and go to state 63
    MENOR           shift and go to state 64
    MENORIGUAL      shift and go to state 65
    IGUAL           shift and go to state 66
    ARROBA          shift and go to state 67
    PONTO           shift and go to state 68


state 42

    (18) expr -> NEW . ID

    ID              shift and go to state 69


state 43

    (19) expr -> ISVOID . expr
    (18) expr -> . NEW ID
    (19) expr -> . ISVOID expr
    (20) expr -> . NOT expr
    (21) expr -> . COMPLEMENTO expr
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
    (25) expr -> . NUMERO
    (26) expr -> . ID
    (27) expr -> . expr MAIS expr
    (28) expr -> . expr MENOS expr
    (29) expr -> . expr MULTIPLICA expr
    (30) expr -> . expr DIVISAO expr
    (31) expr -> . expr MENOR expr
    (32) expr -> . expr MENORIGUAL expr
    (33) expr -> . expr IGUAL expr
    (34) expr -> . ID SETA expr
    (35) expr -> . ABREPARENTESES expr FECHAPARENTESES
    (36) expr -> . ID ABREPARENTESES expr_list FECHAPARENTESES
    (37) expr -> . expr ARROBA ID PONTO expr
    (38) expr -> . expr PONTO expr
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . ABRECHAVES expr_list_mais FECHACHAVES
    (47) expr -> . LET ID DOISPONTOS ID SETA expr id_type_list IN expr
    (48) expr -> . LET ID DOISPONTOS ID id_type_list IN expr
    (54) expr -> . CASE expr OF id_type_list_2 ESAC

    NEW             shift and go to state 42
    ISVOID          shift and go to state 43
    NOT             shift and go to state 44
    COMPLEMENTO     shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    NUMERO          shift and go to state 49
    ID              shift and go to state 40
    ABREPARENTESES  shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    ABRECHAVES      shift and go to state 53
    LET             shift and go to state 54
    CASE            shift and go to state 55

    expr                           shift and go to state 70

state 44

    (20) expr -> NOT . expr
    (18) expr -> . NEW ID
    (19) expr -> . ISVOID expr
    (20) expr -> . NOT expr
    (21) expr -> . COMPLEMENTO expr
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
    (25) expr -> . NUMERO
    (26) expr -> . ID
    (27) expr -> . expr MAIS expr
    (28) expr -> . expr MENOS expr
    (29) expr -> . expr MULTIPLICA expr
    (30) expr -> . expr DIVISAO expr
    (31) expr -> . expr MENOR expr
    (32) expr -> . expr MENORIGUAL expr
    (33) expr -> . expr IGUAL expr
    (34) expr -> . ID SETA expr
    (35) expr -> . ABREPARENTESES expr FECHAPARENTESES
    (36) expr -> . ID ABREPARENTESES expr_list FECHAPARENTESES
    (37) expr -> . expr ARROBA ID PONTO expr
    (38) expr -> . expr PONTO expr
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . ABRECHAVES expr_list_mais FECHACHAVES
    (47) expr -> . LET ID DOISPONTOS ID SETA expr id_type_list IN expr
    (48) expr -> . LET ID DOISPONTOS ID id_type_list IN expr
    (54) expr -> . CASE expr OF id_type_list_2 ESAC

    NEW             shift and go to state 42
    ISVOID          shift and go to state 43
    NOT             shift and go to state 44
    COMPLEMENTO     shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    NUMERO          shift and go to state 49
    ID              shift and go to state 40
    ABREPARENTESES  shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    ABRECHAVES      shift and go to state 53
    LET             shift and go to state 54
    CASE            shift and go to state 55

    expr                           shift and go to state 71

state 45

    (21) expr -> COMPLEMENTO . expr
    (18) expr -> . NEW ID
    (19) expr -> . ISVOID expr
    (20) expr -> . NOT expr
    (21) expr -> . COMPLEMENTO expr
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
    (25) expr -> . NUMERO
    (26) expr -> . ID
    (27) expr -> . expr MAIS expr
    (28) expr -> . expr MENOS expr
    (29) expr -> . expr MULTIPLICA expr
    (30) expr -> . expr DIVISAO expr
    (31) expr -> . expr MENOR expr
    (32) expr -> . expr MENORIGUAL expr
    (33) expr -> . expr IGUAL expr
    (34) expr -> . ID SETA expr
    (35) expr -> . ABREPARENTESES expr FECHAPARENTESES
    (36) expr -> . ID ABREPARENTESES expr_list FECHAPARENTESES
    (37) expr -> . expr ARROBA ID PONTO expr
    (38) expr -> . expr PONTO expr
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . ABRECHAVES expr_list_mais FECHACHAVES
    (47) expr -> . LET ID DOISPONTOS ID SETA expr id_type_list IN expr
    (48) expr -> . LET ID DOISPONTOS ID id_type_list IN expr
    (54) expr -> . CASE expr OF id_type_list_2 ESAC

    NEW             shift and go to state 42
    ISVOID          shift and go to state 43
    NOT             shift and go to state 44
    COMPLEMENTO     shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    NUMERO          shift and go to state 49
    ID              shift and go to state 40
    ABREPARENTESES  shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    ABRECHAVES      shift and go to state 53
    LET             shift and go to state 54
    CASE            shift and go to state 55

    expr                           shift and go to state 72

state 46

    (22) expr -> STRING .

    MAIS            reduce using rule 22 (expr -> STRING .)
    MENOS           reduce using rule 22 (expr -> STRING .)
    MULTIPLICA      reduce using rule 22 (expr -> STRING .)
    DIVISAO         reduce using rule 22 (expr -> STRING .)
    MENOR           reduce using rule 22 (expr -> STRING .)
    MENORIGUAL      reduce using rule 22 (expr -> STRING .)
    IGUAL           reduce using rule 22 (expr -> STRING .)
    ARROBA          reduce using rule 22 (expr -> STRING .)
    PONTO           reduce using rule 22 (expr -> STRING .)
    PONTOVIRGULA    reduce using rule 22 (expr -> STRING .)
    FECHAPARENTESES reduce using rule 22 (expr -> STRING .)
    THEN            reduce using rule 22 (expr -> STRING .)
    LOOP            reduce using rule 22 (expr -> STRING .)
    OF              reduce using rule 22 (expr -> STRING .)
    FECHACHAVES     reduce using rule 22 (expr -> STRING .)
    VIRGULA         reduce using rule 22 (expr -> STRING .)
    ELSE            reduce using rule 22 (expr -> STRING .)
    POOL            reduce using rule 22 (expr -> STRING .)
    FI              reduce using rule 22 (expr -> STRING .)
    IN              reduce using rule 22 (expr -> STRING .)


state 47

    (23) expr -> TRUE .

    MAIS            reduce using rule 23 (expr -> TRUE .)
    MENOS           reduce using rule 23 (expr -> TRUE .)
    MULTIPLICA      reduce using rule 23 (expr -> TRUE .)
    DIVISAO         reduce using rule 23 (expr -> TRUE .)
    MENOR           reduce using rule 23 (expr -> TRUE .)
    MENORIGUAL      reduce using rule 23 (expr -> TRUE .)
    IGUAL           reduce using rule 23 (expr -> TRUE .)
    ARROBA          reduce using rule 23 (expr -> TRUE .)
    PONTO           reduce using rule 23 (expr -> TRUE .)
    PONTOVIRGULA    reduce using rule 23 (expr -> TRUE .)
    FECHAPARENTESES reduce using rule 23 (expr -> TRUE .)
    THEN            reduce using rule 23 (expr -> TRUE .)
    LOOP            reduce using rule 23 (expr -> TRUE .)
    OF              reduce using rule 23 (expr -> TRUE .)
    FECHACHAVES     reduce using rule 23 (expr -> TRUE .)
    VIRGULA         reduce using rule 23 (expr -> TRUE .)
    ELSE            reduce using rule 23 (expr -> TRUE .)
    POOL            reduce using rule 23 (expr -> TRUE .)
    FI              reduce using rule 23 (expr -> TRUE .)
    IN              reduce using rule 23 (expr -> TRUE .)


state 48

    (24) expr -> FALSE .

    MAIS            reduce using rule 24 (expr -> FALSE .)
    MENOS           reduce using rule 24 (expr -> FALSE .)
    MULTIPLICA      reduce using rule 24 (expr -> FALSE .)
    DIVISAO         reduce using rule 24 (expr -> FALSE .)
    MENOR           reduce using rule 24 (expr -> FALSE .)
    MENORIGUAL      reduce using rule 24 (expr -> FALSE .)
    IGUAL           reduce using rule 24 (expr -> FALSE .)
    ARROBA          reduce using rule 24 (expr -> FALSE .)
    PONTO           reduce using rule 24 (expr -> FALSE .)
    PONTOVIRGULA    reduce using rule 24 (expr -> FALSE .)
    FECHAPARENTESES reduce using rule 24 (expr -> FALSE .)
    THEN            reduce using rule 24 (expr -> FALSE .)
    LOOP            reduce using rule 24 (expr -> FALSE .)
    OF              reduce using rule 24 (expr -> FALSE .)
    FECHACHAVES     reduce using rule 24 (expr -> FALSE .)
    VIRGULA         reduce using rule 24 (expr -> FALSE .)
    ELSE            reduce using rule 24 (expr -> FALSE .)
    POOL            reduce using rule 24 (expr -> FALSE .)
    FI              reduce using rule 24 (expr -> FALSE .)
    IN              reduce using rule 24 (expr -> FALSE .)


state 49

    (25) expr -> NUMERO .

    MAIS            reduce using rule 25 (expr -> NUMERO .)
    MENOS           reduce using rule 25 (expr -> NUMERO .)
    MULTIPLICA      reduce using rule 25 (expr -> NUMERO .)
    DIVISAO         reduce using rule 25 (expr -> NUMERO .)
    MENOR           reduce using rule 25 (expr -> NUMERO .)
    MENORIGUAL      reduce using rule 25 (expr -> NUMERO .)
    IGUAL           reduce using rule 25 (expr -> NUMERO .)
    ARROBA          reduce using rule 25 (expr -> NUMERO .)
    PONTO           reduce using rule 25 (expr -> NUMERO .)
    PONTOVIRGULA    reduce using rule 25 (expr -> NUMERO .)
    FECHAPARENTESES reduce using rule 25 (expr -> NUMERO .)
    THEN            reduce using rule 25 (expr -> NUMERO .)
    LOOP            reduce using rule 25 (expr -> NUMERO .)
    OF              reduce using rule 25 (expr -> NUMERO .)
    FECHACHAVES     reduce using rule 25 (expr -> NUMERO .)
    VIRGULA         reduce using rule 25 (expr -> NUMERO .)
    ELSE            reduce using rule 25 (expr -> NUMERO .)
    POOL            reduce using rule 25 (expr -> NUMERO .)
    FI              reduce using rule 25 (expr -> NUMERO .)
    IN              reduce using rule 25 (expr -> NUMERO .)


state 50

    (35) expr -> ABREPARENTESES . expr FECHAPARENTESES
    (18) expr -> . NEW ID
    (19) expr -> . ISVOID expr
    (20) expr -> . NOT expr
    (21) expr -> . COMPLEMENTO expr
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
    (25) expr -> . NUMERO
    (26) expr -> . ID
    (27) expr -> . expr MAIS expr
    (28) expr -> . expr MENOS expr
    (29) expr -> . expr MULTIPLICA expr
    (30) expr -> . expr DIVISAO expr
    (31) expr -> . expr MENOR expr
    (32) expr -> . expr MENORIGUAL expr
    (33) expr -> . expr IGUAL expr
    (34) expr -> . ID SETA expr
    (35) expr -> . ABREPARENTESES expr FECHAPARENTESES
    (36) expr -> . ID ABREPARENTESES expr_list FECHAPARENTESES
    (37) expr -> . expr ARROBA ID PONTO expr
    (38) expr -> . expr PONTO expr
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . ABRECHAVES expr_list_mais FECHACHAVES
    (47) expr -> . LET ID DOISPONTOS ID SETA expr id_type_list IN expr
    (48) expr -> . LET ID DOISPONTOS ID id_type_list IN expr
    (54) expr -> . CASE expr OF id_type_list_2 ESAC

    NEW             shift and go to state 42
    ISVOID          shift and go to state 43
    NOT             shift and go to state 44
    COMPLEMENTO     shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    NUMERO          shift and go to state 49
    ID              shift and go to state 40
    ABREPARENTESES  shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    ABRECHAVES      shift and go to state 53
    LET             shift and go to state 54
    CASE            shift and go to state 55

    expr                           shift and go to state 73

state 51

    (42) expr -> IF . expr THEN expr ELSE expr FI
    (18) expr -> . NEW ID
    (19) expr -> . ISVOID expr
    (20) expr -> . NOT expr
    (21) expr -> . COMPLEMENTO expr
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
